5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1708_3063.log
== TEST (2019-04-29 15:11:42) 
-- CODE:
PO = input(int("Digite quantidade de peças de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO=200) and (nome_da_armadura==INTEIRA)
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO<=50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
   print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 5
    if (PO=200) and (nome_da_armadura==INTEIRA)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:50) 
-- CODE:
PO = input(int("Digite quantidade de peças de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO=200) and (nome_da_armadura==INTEIRA)/;
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO<=50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
   print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 5
    if (PO=200) and (nome_da_armadura==INTEIRA)/;
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:12:01) 
-- CODE:
PO = input(int("Digite quantidade de peças de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO<=50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
   print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 5
    if (PO=200) and (nome_da_armadura==INTEIRA):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:27) 
-- CODE:
PO = input(int("Digite quantidade de peças de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
   print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 13
    print(resistencia)
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:15) 
-- CODE:
PO = input(int("Digite quantidade de peças de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PO = input(int("Digite quantidade de peças de ouro"))
ValueError: invalid literal for int() with base 10: 'Digite quantidade de peças de ouro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:35) 
-- CODE:
PO = input(int("Digite quantidade de pecas de ouro"))
nome_da_armadura = input("")
d = input(int(" "))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PO = input(int("Digite quantidade de pecas de ouro"))
ValueError: invalid literal for int() with base 10: 'Digite quantidade de pecas de ouro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:16) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- OUTPUT:
PO INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:15:33) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- EXECUTION TIME:
0.216979
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO INSUFICIENTE
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO INSUFICIENTE
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:37) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- OUTPUT:
PO INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:16) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- OUTPUT:
PO INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:42) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- OUTPUT:
PO INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:59) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO<=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (PO<=200) and (nome_da_armadura==INTEIRA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:18) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO<=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
else:
	print("PO INSUFICIENTE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (PO<=200) and (nome_da_armadura==INTEIRA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:37) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:22) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:35) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:43) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:37) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA):
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA):
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
NameError: name 'INTEIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:29) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura=="INTEIRA")
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura=="MALHA")
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura=="PLACA")
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura=="INTEIRA")
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:13) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA)
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==MALHA)
	resistencia =  15*d - 1 
	print(resistencia)
elif(PO==100) and (nome_da_armadura==PLACA)
	resistencia = 20 * d - 18
	print(resistencia)
elif (d>=8) or (nome_da_armadura!=INTEIRA) or (nome_da_armadura!=MALHA) or (nome_da_armadura!= PLACA):
	print("Entradas invalidas")
else:
	print("PO INSUFICIENTE")
	
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:06) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:20) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:32) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:12) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO==200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:27) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura=="INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura=="INTEIRA):
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:12) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura == INTEIRA)
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura == INTEIRA)
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:19) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura == INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura == INTEIRA)
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:39) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura == INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura == INTEIRA)
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:48) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura == INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
if (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)
	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura == INTEIRA)
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:58) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA)
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO>=50) and (nome_da_armadura==MALHA)
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:07) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:20) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO>=200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:18) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:35) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO>=50) and (nome_da_armadura==MALHA):
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:12) 
-- CODE:
PO = int(input(""))
nome_da_armadura = input("")
d = int(input(""))

if (PO==200) and (nome_da_armadura==INTEIRA):
	resistencia = 30 * d - 20
	print(resistencia)
elif (PO==50) and (nome_da_armadura==INTEIRA): 
	resistencia = 15 * d - 1
	print(resistencia)

	
-- ERROR:
File "XXXX", line 5
    if (PO>=200) and (nome_da_armadura==INTEIRA)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
